--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -1,6 +1,13 @@
 name: Psalm Static analysis
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [ "main" ]
+  schedule:
+    - cron: '23 21 * * 1'
 
 jobs:
   psalm:
