--- a/.github/workflows/psalmjack.yml
+++ b/.github/workflows/psalmjack.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Psalm
-        uses: docker://vimeo/psalm-github-actions
+        uses: docker://ghcr.io/psalm/psalm-github-actions:5.7.7
         with:
           security_analysis: true
           report_file: results.sarif
