--- a/.github/workflows/opengrep.yml
+++ b/.github/workflows/opengrep.yml
@@ -16,18 +16,29 @@ jobs:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-    name: Scan
+    name: Opengrep Scan
     runs-on: ubuntu-latest
     steps:
       # Checkout project source
       - uses: actions/checkout@v4
-
-      - run: |
-              echo "Download Open Grep"
-              curl -sL https://github.com/opengrep/opengrep/releases/download/v1.0.0-alpha.9/opengrep_manylinux_x86 -o /tmp/opengrep
-              chmod +x /tmp/opengrep
-              /tmp/opengrep scan --sarif-output=sarif.json .
-      # Upload SARIF file generated in previous step
+      
+      - name: "Install Opengrep"
+        env:
+          RELEASE_VERSION: "v1.0.0-alpha.11"
+        run: |
+              set -e
+              echo "Download Opengrep"
+              curl -sSfL \
+                -o "/usr/local/bin/opengrep" \
+                https://github.com/opengrep/opengrep/releases/download/${RELEASE_VERSION}/opengrep_manylinux_x86
+              chmod +x /usr/local/bin/opengrep
+              echo "Opengrep installed"
+              opengrep --version
+      
+      - name: "Run Opengrep"
+        run: opengrep scan --metrics=off --sarif-output ./results.sarif .
+      
+        # Upload SARIF file generated in previous step
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
         with:
